--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
   <head>
     <title>week5</title>
-    <link href="css/style.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <body>
-      <h1 class="heading">Capitals</h1>
-      <h2 class="heading">London</h2>
-      <p>London is capital of England.</p>
-      <h2 class="heading">Paris</h2>
-      <p class="paris">Paris is capital of France.</p>
-    </body>
+    <h1 class="heading">Capitals</h1>
+    <h2 class="heading" id="london-heading">London</h2>
+    <p>London is capital of England.</p>
+    <h2 class="heading">Paris</h2>
+    <p class="paris">Paris is capital of France.</p>
   </body>
 </html>
