practices border padding margin with p and span

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
     <p>Ottawa is capital of Canada.</p>
 
     <p>Go to the <a href="#top"> top </a></p>
+    <a
+      target="_blank"
+      href="https://en.wikipedia.org/wiki/Key_management#Key_Management_Interoperability_Protocol_(KMIP)"
+      >link to specific part on mdn</a
+    >
+    <p class="paragraph-with-span">The typical filler text is the <span>Lorem Ipsum</span>.</p>
   </body>
 </html>
